--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,10 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 
-const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
-	(a, b) =>
-		new Date(b.frontmatter.pubDate).valueOf() -
-		new Date(a.frontmatter.pubDate).valueOf()
+const response = await fetch(
+	"https://tony.sanjaya.info/wp-json/wp/v2/posts?per_page=100"
 );
+const posts = await response.json();
 ---
 
 <!DOCTYPE html>
@@ -24,9 +23,9 @@ const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
 					posts.map((post) => (
 						<article>
 							<h2 class="post-title text-2xl font-bold">
-								<a href={post.url}>{post.frontmatter.title}</a>
+								<a href="" set:html={post.title["rendered"]} />
 							</h2>
-							<p class="">{post.frontmatter.description}</p>
+							<div set:html={post.excerpt["rendered"]} />
 						</article>
 					))
 				}
