--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,6 +29,6 @@
 		}
 	}
 	.btn {
-		@apply italic bg-blue-700 text-white px-2 py-1 text-xs hover:bg-blue-900;
+		@apply italic bg-blue-700 text-white px-2 py-1 text-xs hover:bg-blue-900 hover:scale-110 transition duration-200;
 	}
 }
