--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 
 const response = await fetch(
-	"https://tony.sanjaya.info/wp-json/wp/v2/posts?per_page=100"
+	`${import.meta.env.PUBLIC_API_URL}/posts?per_page=100`
 );
 const posts = await response.json();
 ---
@@ -23,7 +23,7 @@ const posts = await response.json();
 					posts.map((post) => (
 						<article>
 							<h2 class="post-title text-2xl font-bold">
-								<a href="" set:html={post.title["rendered"]} />
+								<a href={post.slug} set:html={post.title["rendered"]} />
 							</h2>
 							<div set:html={post.excerpt["rendered"]} />
 						</article>
