--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -15,7 +15,7 @@ const { title, description, image = "/kobu-nerd.jpg" } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/png" href="/coding.png" />
+<link rel="icon" type="image/png" href="/typescript.png" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
