--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -5,7 +5,12 @@ const { href, class: className, ...props } = Astro.props;
 const isActive = href === Astro.url.pathname.replace(/\/$/, "");
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
+<a
+	href={href}
+	rel="prefetch"
+	class:list={[className, { active: isActive }]}
+	{...props}
+>
 	<slot />
 </a>
 <style>
