--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,14 +23,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 </nav>
 {
 	Astro.url.pathname == "/" ? (
-		<header class="max-w-screen-md py-24 text-center mx-auto">
+		<header class="max-w-screen-md py-24 text-center mx-auto px-4">
 			<h1 class="text-5xl font-bold">
 				<a href="/">{SITE_TITLE}</a>
 			</h1>
 			<p class="text-sm mt-2">{SITE_DESCRIPTION}</p>
 		</header>
 	) : (
-		<header class="max-w-screen-sm py-4 mx-auto">
+		<header class="max-w-screen-sm py-4 mx-auto px-4">
 			<a href="/" class="btn">
 				← Tony S.
 			</a>
