--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,7 +19,7 @@
 
 @layer components {
 	main {
-		@apply max-w-screen-sm mx-auto py-4;
+		@apply max-w-screen-sm mx-auto p-4;
 	}
 	.post-title {
 		a {
@@ -35,5 +35,8 @@
 	}
 	.btn {
 		@apply italic bg-blue-700 text-white px-2 py-1 text-xs hover:bg-blue-900 hover:text-white hover:scale-110 transition duration-200;
+	}
+	iframe {
+		@apply aspect-video w-full h-auto;
 	}
 }
