new footer layout

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,12 @@
 const today = new Date();
 ---
 
-<footer class="max-w-screen-md mx-auto text-center text-xs mt-16 italic py-2">
-	&copy; {today.getFullYear()} Tony S. All rights reserved.
+<footer class="bg-blue-700 py-24 px-4 mt-24 text-white">
+	<div class="max-w-screen-sm mx-auto text-center">
+		<h3 class="text-4xl font-bold text-white">Tony S.</h3>
+		<p class="text-sm mt-4">
+			Web / Front-end / Back-end Developer / Engineer or whatever it's called.
+			Bottom line, I build awesome websites and everything around it.
+		</p>
+	</div>
 </footer>
