update back button

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,7 +33,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 		</header>
 	) : (
 		<header class="max-w-screen-sm py-4 mx-auto px-4">
-			<a href="/" class="btn" rel="prefetch">
+			<a href="/" class="text-xs text-blue-700 font-bold" rel="prefetch">
 				← Tony S.
 			</a>
 		</header>
